--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:id="@+id/edtpeso"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/digite_seu_peso_ex_70_5"
+            android:hint="Digite o seu peso (EX: 65.200)"
             android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -64,7 +64,7 @@
             android:id="@+id/edtaltura"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/digite_a_sua_altura_ex_1_70"
+            android:hint="Digite a sua altura (EX: 1.70)"
             android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
